# Rusting-

Backend/: .env  Cargo.toml
Backend/src/: main.rs
Frontend/: index.html
